# 1.5inch_lvgl

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old  temp.txt  temp_snip.txt  temp_ui_snip.txt  tmp_wifi_config.h
broker/: .env  .env.example  README.md  broker.js  package-lock.json  package.json
components/dht11/: CMakeLists.txt  dht11.c
docs/: SCREEN_SAVER.md  TODO.md  UI_TODO.md  план.md  погода.md
fonts/: Montserrat_20.c  Montserrat_40.c  fonts.h
icons/: alien.c  clear-night.c  clear.c  fog.c  hail.c  lightning-rainy.c  lightning.c  overcast.c  partlycloudy.c  pouring.c  rainy.c  snowy-rainy.c  snowy.c  thermometer.c  windy-variant.c  windy.c
main/: CMakeLists.txt  devices_init.c  devices_init.h  ha_client.c  ha_client.cpp  ha_client.h  ha_client_config.h  ha_http_config.h  ha_mqtt.cpp  ha_mqtt.hpp  ha_mqtt_config.h  ha_server_config.h  ha_ws.cpp  ha_ws.hpp  ha_ws_config.h  http_manager.cpp  http_manager.hpp  http_utils.cpp  idf_component.yml  main.c  main.cpp  main_head.cpp  state_manager.cpp  state_manager.hpp  temp_part1.cpp  temp_part2.cpp  temp_part3.cpp  ui_app.c  ui_app.cpp  ui_app.h  wifi_config.h  wifi_manager.c  wifi_manager.h
main/app/: app_config.hpp  app_events.cpp  app_events.hpp  app_state.hpp  devices_init.c  devices_init.h  entities.cpp  entities.hpp  event_logger.cpp  event_logger.hpp  input_controller.cpp  input_controller.hpp  router.cpp  router.hpp  state_manager.cpp  state_manager.hpp  toggle_controller.cpp  toggle_controller.hpp
main/config/: config.cpp  config.hpp  home_assistant.yaml
main/config_server/: config_server.cpp  config_server.hpp  config_store.cpp  config_store.hpp  config_store_c.cpp  config_store_c.h
main/config_server/www/: app.js  index.html  style.css
main/core/: actions.hpp  store.cpp  store.hpp
main/devices/: devices_init.c  devices_init.cpp  dht11.cpp  dht11.hpp  display_init.cpp  display_init.hpp  input_init.cpp  input_init.hpp  lvgl_init.cpp  touch_init.cpp  touch_init.hpp
main/infra/device/: devices_init.c
main/infra/transport/: ha_mqtt.cpp  ha_mqtt.hpp  http_utils.cpp  http_utils.h  i_transport.hpp  mqtt_transport.cpp  mqtt_transport.hpp
main/services/: ha_service.cpp  ha_service.hpp
main/transport/: ha_http_config.h  ha_mqtt.cpp  ha_mqtt_config.h  ha_server_config.h  http_manager.cpp  http_manager.hpp  http_utils.cpp  wifi_config.h  wifi_manager.c  wifi_manager.h
main/ui/: locale_ru.cpp  locale_ru.hpp  rooms.cpp  rooms.hpp  screensaver.cpp  screensaver.hpp  splash.cpp  splash.hpp  switch.cpp  switch.hpp  ui_app.cpp  ui_app.h  ui_app_head.cpp
mqtt_proxy/: .env  README.md  broker.js  index.js  package-lock.json  package.json
server_test/: README.md  package-lock.json  package.json  server.js
