idf_component_register(
    SRCS
        "main.cpp"
        "devices_init.c"
        "ui_app.cpp"
        "wifi_manager.c"
        "ha_mqtt.cpp"
        "app/router.cpp"
        "app/entities.cpp"
        "state_manager.cpp"
        "http_manager.cpp"
        "http_utils.cpp"
        "../fonts/Montserrat_70.c"
        "../fonts/Montserrat_20.c"
        "../fonts/Montserrat_30.c"
        "../fonts/Montserrat_40.c"
        "../fonts/Montserrat_50.c"
        "../icons/clear.c"
        "../icons/clear-night.c"
        "../icons/sunny.c"
        "../icons/partlycloudy.c"
        "../icons/cloudy.c"
        "../icons/overcast.c"
        "../icons/rainy.c"
        "../icons/pouring.c"
        "../icons/lightning.c"
        "../icons/lightning-rainy.c"
        "../icons/snowy.c"
        "../icons/snowy-rainy.c"
        "../icons/hail.c"
        "../icons/fog.c"
        "../icons/windy.c"
        "../icons/windy-variant.c"
        "../icons/alien.c"
    INCLUDE_DIRS
        "."
        "../fonts"
        "../icons"
    REQUIRES
        freertos
        esp_timer
        esp_http_client
        esp-tls
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        driver
        esp_lcd
        esp_lcd_touch
        espressif__esp_lcd_touch_cst816s
        esp_lcd_sh8601
        esp_lvgl_port
        json
        mqtt
)
