idf_component_register(
    SRCS
        "main.cpp"
        "devices/devices_init.c"
        "devices/display_init.cpp"
        "devices/input_init.cpp"
        "devices/touch_init.cpp"
        "ui/ui_app.cpp"
        "ui/rooms.cpp"
        "ui/screensaver.cpp"
        "ui/splash.cpp"
        "ui/switch.cpp"
        "transport/wifi_manager.c"
        "transport/ha_mqtt.cpp"
        "transport/http_manager.cpp"
        "transport/http_utils.cpp"
        "config_server/config_store.cpp"
        "config_server/config_server.cpp"
        "config_server/config_store_c.cpp"
        "app/router.cpp"
        "app/app_events.cpp"
        "app/toggle_controller.cpp"
        "app/input_controller.cpp"
        "app/event_logger.cpp"
        "app/entities.cpp"
        "app/state_manager.cpp"
        "../fonts/Montserrat_70.c"
        "../fonts/Montserrat_20.c"
        "../fonts/Montserrat_30.c"
        "../fonts/Montserrat_40.c"
        "../fonts/Montserrat_50.c"
        "../icons/clear.c"
        "../icons/clear-night.c"
        "../icons/sunny.c"
        "../icons/partlycloudy.c"
        "../icons/cloudy.c"
        "../icons/overcast.c"
        "../icons/rainy.c"
        "../icons/pouring.c"
        "../icons/lightning.c"
        "../icons/lightning-rainy.c"
        "../icons/snowy.c"
        "../icons/snowy-rainy.c"
        "../icons/hail.c"
        "../icons/fog.c"
        "../icons/windy.c"
        "../icons/windy-variant.c"
        "../icons/alien.c"
    INCLUDE_DIRS
        "."
        "app"
        "devices"
        "transport"
        "../fonts"
        "../icons"
        "config_server"
    REQUIRES
        freertos
        esp_timer
        esp_http_client
        esp-tls
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_http_server
        driver
        esp_lcd
        esp_lcd_touch
        espressif__esp_lcd_touch_cst816s
        esp_lcd_sh8601
        esp_lvgl_port
        json
        mqtt
    EMBED_TXTFILES
        "config_server/www/index.html"
        "config_server/www/style.css"
)
